session
added logic to map use actions
